--- a/products.html
+++ b/products.html
@@ -9,5 +9,72 @@
       <img class="logo" src="./imagenes/beautylogo.avif" />
       <button class="header__button">Cart</button>
     </header>
+    <div class="page__title">
+      <h1 class="title">Exclusivo Maquillaje Online</h1>
+    </div>
+
+    <div class="page__container"></div>
+
+    <ul class="products">
+      <li class="product">
+        <img class="product__img" src="./imagenes/labial.avif" />
+        <p>Armani</p>
+        <p class="product__name">Lip de labios Mate</p>
+        <p>Labios</p>
+        <p>38.99 €</p>
+        <button class="product__button">Add Cart</button>
+      </li>
+      <li class="product">
+        <img class="product__img" src="./imagenes/rubor.avif" />
+        <p>Dior</p>
+        <p class="product__name">Rubor luminoso natural</p>
+        <p>Cara</p>
+        <p>46.99 €</p>
+        <button class="product__button">Add Cart</button>
+      </li>
+      <li class="product">
+        <img class="product__img" src="./imagenes/gloss.avif" />
+        <p>Rare Beauty</p>
+        <p class="product__name">Duo de balsamo labial</p>
+        <p>Labios</p>
+        <p>31.99 €</p>
+        <button class="product__button">Add Cart</button>
+      </li>
+      <li class="product">
+        <img class="product__img" src="./imagenes/kit.avif" />
+        <p>Benefit Cosmetics</p>
+        <p class="product__name">Kit maquillaje y cuidado de poros</p>
+        <p>Cara</p>
+        <p>122.99 €</p>
+        <button class="product__button">Add Cart</button>
+      </li>
+      <li class="product">
+        <img class="product__img" src="./imagenes/gloss2.avif" />
+        <p>La Mer</p>
+        <p class="product__name">Lip Volumizer</p>
+        <p>Labios</p>
+        <p>86.99 €</p>
+        <button class="product__button">Add Cart</button>
+      </li>
+      <li class="product">
+        <img class="product__img" src="./imagenes/esmalte.avif" />
+        <p>Dior</p>
+        <p class="product__name">Esmalte de uñas efecto gel</p>
+        <p>Uñas</p>
+        <p>32.99 €</p>
+        <button class="product__button">Add Cart</button>
+      </li>
+    </ul>
+    <footer class="footer">
+      Contactanos en nuestras Redes Sociales
+      <div class="footer__img">
+        <a title="Facebook" href="https://www.facebook.com/brislazaroo"
+          ><img class="footer__fb" src="./imagenes/fb.png"
+        /></a>
+        <a title="Instagram" href=" https://www.instagram.com/brislazaro/"
+          ><img class="footer__fb" src="./imagenes/ig.png"
+        /></a>
+      </div>
+    </footer>
   </body>
 </html>
