--- a/products.html
+++ b/products.html
@@ -12,72 +12,7 @@
     <main class="page__container">
       <h1 class="page__title">Exclusivo Maquillaje Online</h1>
 
-      <ul class="products">
-        <li class="product">
-          <img class="product__img" src="./imagenes/labial.avif" />
-          <p>Armani</p>
-          <p class="product__name">Lip de labios Mate</p>
-          <p>Labios</p>
-          <p>38.99 €</p>
-          <button class="product__button">Add Cart</button>
-        </li>
-        <li class="product">
-          <img class="product__img" src="./imagenes/rubor.avif" />
-          <p>Dior</p>
-          <p class="product__name">Rubor luminoso natural</p>
-          <p>Cara</p>
-          <p>46.99 €</p>
-          <button class="product__button">Add Cart</button>
-        </li>
-        <li class="product">
-          <img class="product__img" src="./imagenes/gloss.avif" />
-          <p>Rare Beauty</p>
-          <p class="product__name">Duo de balsamo labial</p>
-          <p>Labios</p>
-          <p>31.99 €</p>
-          <button class="product__button">Add Cart</button>
-        </li>
-        <li class="product">
-          <img class="product__img" src="./imagenes/kit.avif" />
-          <p>Benefit Cosmetics</p>
-          <p class="product__name">Kit maquillaje y cuidado de poros</p>
-          <p>Cara</p>
-          <p>122.99 €</p>
-          <button class="product__button">Add Cart</button>
-        </li>
-        <li class="product">
-          <img class="product__img" src="./imagenes/gloss2.avif" />
-          <p>La Mer</p>
-          <p class="product__name">Lip Volumizer</p>
-          <p>Labios</p>
-          <p>86.99 €</p>
-          <button class="product__button">Add Cart</button>
-        </li>
-        <li class="product">
-          <img class="product__img" src="./imagenes/esmalte.avif" />
-          <p>Dior</p>
-          <p class="product__name">Esmalte de uñas efecto gel</p>
-          <p>Uñas</p>
-          <p>32.99 €</p>
-          <button class="product__button">Add Cart</button>
-        </li>
-        <li class="product">
-          <img class="product__img" src="./imagenes/esmalte.avif" />
-          <p>Dior</p>
-          <p class="product__name">Esmalte de uñas efecto gel</p>
-          <p>Uñas</p>
-          <p>32.99 €</p>
-          <button class="product__button">Add Cart</button>
-        </li>
-        <li class="product">
-          <img class="product__img" src="./imagenes/esmalte.avif" />
-          <p>Dior</p>
-          <p class="product__name">Esmalte de uñas efecto gel</p>
-          <p>Uñas</p>
-          <p>32.99 €</p>
-          <button class="product__button">Add Cart</button>
-        </li>
-      </ul>
+      <ul class="products"></ul>
     </main>
 
     <footer class="footer">
@@ -97,5 +32,7 @@
         /></a>
       </div>
     </footer>
+
+    <script src="./products.js"></script>
   </body>
 </html>
