--- a/cart.html
+++ b/cart.html
@@ -2,22 +2,27 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/products.css" />
-    <title>Maquillaje</title>
+    <link rel="stylesheet" href="./styles/cart.css" />
+    <title>Carrito</title>
   </head>
   <body>
     <header class="header">
       <img class="logo" src="./imagenes/beautylogo.avif" />
-      <a title="Cart" href="./cart.html">
-        <button class="header__button">Cart</button></a
+      <a title="Home" href="./products.html">
+        <button class="header__button">Home</button></a
       >
     </header>
     <main class="page__container">
-      <h1 class="page__title">Exclusivo Maquillaje Online</h1>
-
-      <ul class="products"></ul>
+      <h1>Productos añadidos al Carrito</h1>
+      <div class="cart">
+        <ul class="cart__list"></ul>
+        <div class="cart__buy">
+          <h2>Total</h2>
+          <h3 class="buy__total">23 euros</h3>
+          <a href="./compra.html"> <button class="buy">Comprar</button></a>
+        </div>
+      </div>
     </main>
-
     <footer class="footer">
       Contactanos en nuestras Redes Sociales
       <div class="footer__img">
@@ -35,8 +40,7 @@
         /></a>
       </div>
     </footer>
-
     <script src="./data.js"></script>
-    <script src="./products.js"></script>
+    <script src="./cart.js"></script>
   </body>
 </html>
