add login button

--- a/products.html
+++ b/products.html
@@ -8,9 +8,14 @@
   <body>
     <header class="header">
       <img class="logo" src="./imagenes/beautylogo.avif" />
-      <a title="Cart" href="./cart.html">
-        <button class="header__button">Cart</button></a
-      >
+      <div class="header__buttons">
+        <a title=" login" href="./login.html">
+          <img class="login__img" src="./imagenes/login.jpeg" />
+        </a>
+        <a title="Cart" href="./cart.html">
+          <button class="header__button">Cart</button></a
+        >
+      </div>
     </header>
     <main class="page__container">
       <h1 class="page__title">Exclusivo Maquillaje Online</h1>
