--- a/login.html
+++ b/login.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/login.css" />
+    <title>Iniciar Sesion</title>
   </head>
   <body>
-    hola
+    <header class="header">
+      <img class="logo" src="./imagenes/beautylogo.avif" />
+      <div class="header__buttons">
+        <a title="Home" href="./products.html">
+          <button class="header__button">Home</button></a
+        >
+      </div>
+    </header>
+
+    <main class="container">
+      <h1>¡Hola Beauty!</h1>
+      <div class="container__info">
+        <label for="user">Introduce tu usuario para Iniciar Sesión</label>
+        <input type="text" id="user" name="user" />
+        <button class="container__button">LogIn</button>
+        <div class="checkbox">
+          <input type="checkbox" id="checkbox" />
+          <label for="checkbox" class="container__checkbox"
+            >By continuing, you agree to our
+            <a
+              title=" login"
+              class="ancor"
+              href="https://es.shein.com/Privacy-Security-Policy-a-282.html"
+              target="_blank"
+              >Política de Privacidad</a
+            >
+            and Términos y Condiciones.</label
+          >
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer">
+      Contactanos en nuestras Redes Sociales
+      <div class="footer__img">
+        <a
+          title="Facebook"
+          target="_blank"
+          href="https://www.facebook.com/brislazaroo"
+          ><img class="footer__link" src="./imagenes/fb.png"
+        /></a>
+        <a
+          title="Instagram"
+          target="_blank"
+          href="https://www.instagram.com/brislazaro/"
+          ><img class="footer__link" src="./imagenes/ig.png"
+        /></a>
+      </div>
+    </footer>
   </body>
 </html>
