add a new producton function

--- a/admin.html
+++ b/admin.html
@@ -26,7 +26,7 @@
 
           <input
             type="text"
-            class="newproducts__p1"
+            class="newproducts__p1 new__products--name"
             id="product"
             name="product"
           />
@@ -39,7 +39,7 @@
 
           <input
             type="text"
-            class="newproducts__p1"
+            class="newproducts__p1 new__products--type"
             id="product"
             name="product"
           />
@@ -52,7 +52,7 @@
 
           <input
             type="text"
-            class="newproducts__p1"
+            class="newproducts__p1 new__products--brand"
             id="product"
             name="product"
           />
@@ -63,14 +63,26 @@
 
           <input
             type="text"
-            class="newproducts__p1"
+            class="newproducts__p1 new__products--price"
             id="product"
             name="product"
           />
         </div>
 
-        <button class="newproducts__button" onclick="">Añadir Producto</button>
+        <div class="products__field">
+          <label for="product" class="newproducts__label">Imagen:</label>
+
+          <input
+            type="text"
+            class="newproducts__p1 new__products--img"
+            id="product"
+            name="product"
+          />
+        </div>
       </form>
     </main>
+    <script src="./data.js"></script>
+
+    <script src="./admin.js"></script>
   </body>
 </html>
