Create getters and setters to modify cart and inventory and change product type color with the type

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/admin.css" />
+    <link rel="stylesheet" href="../styles/global.css" />
+    <link rel="stylesheet" href="../styles/admin.css" />
 
     <title>Administrador</title>
   </head>
   <body>
     <header class="header">
-      <img class="logo" src="./imagenes/beautylogo.avif" />
+      <img class="logo" src="../imagenes/beautylogo.avif" />
       <div class="header__buttons">
         <a title="LogIn" href="./login.html">
           <button class="header__button">Logout</button></a
@@ -81,8 +81,8 @@
         </div>
       </form>
     </main>
-    <script src="./data.js"></script>
+    <script src="../scripts/data.js"></script>
 
-    <script src="./admin.js"></script>
+    <script src="../scripts/admin.js"></script>
   </body>
 </html>
