--- a/pages/cart.html
+++ b/pages/cart.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/cart.css" />
+    <link rel="stylesheet" href="../styles/global.css" />
+    <link rel="stylesheet" href="../styles/cart.css" />
     <title>Carrito</title>
   </head>
   <body>
     <header class="header">
-      <img class="logo" src="./imagenes/beautylogo.avif" />
+      <img class="logo" src="../imagenes/beautylogo.avif" />
+      <nav>
+        <a href="./admin.html">Add product</a>
+        <a href="./products.html">Products</a>
+      </nav>
       <a title="Home" href="./products.html">
         <button class="header__button">Home</button></a
       >
@@ -30,17 +34,17 @@
           title="Facebook"
           target="_blank"
           href="https://www.facebook.com/brislazaroo"
-          ><img class="footer__link" src="./imagenes/fb.png"
+          ><img class="footer__link" src="../imagenes/fb.png"
         /></a>
         <a
           title="Instagram"
           target="_blank"
           href="https://www.instagram.com/brislazaro/"
-          ><img class="footer__link" src="./imagenes/ig.png"
+          ><img class="footer__link" src="../imagenes/ig.png"
         /></a>
       </div>
     </footer>
-    <script src="./data.js"></script>
-    <script src="./cart.js"></script>
+    <script src="../scripts/data.js"></script>
+    <script src="../scripts/cart.js"></script>
   </body>
 </html>
