--- a/pages/compra.html
+++ b/pages/compra.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./compra.css" />
+    <link rel="stylesheet" href="../styles/compra.css" />
     <title>Pedido Realizado</title>
   </head>
   <body>
     <h1>Gracias por su compra</h1>
-    <img class="dinero" src="./imagenes/dinero.jpeg" />
+    <img class="dinero" src=".../imagenes/dinero.jpeg" />
   </body>
 </html>
