--- a/pages/login.html
+++ b/pages/login.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/login.css" />
+    <link rel="stylesheet" href="../styles/global.css" />
+    <link rel="stylesheet" href="../styles/login.css" />
     <title>Iniciar Sesion</title>
   </head>
   <body>
     <header class="header">
-      <img class="logo" src="./imagenes/beautylogo.avif" />
+      <img class="logo" src="../imagenes/beautylogo.avif" />
       <div class="header__buttons">
         <a title="Home" href="./products.html">
           <button class="header__button">Home</button></a
@@ -45,17 +45,17 @@
           title="Facebook"
           target="_blank"
           href="https://www.facebook.com/brislazaroo"
-          ><img class="footer__link" src="./imagenes/fb.png"
+          ><img class="footer__link" src="../imagenes/fb.png"
         /></a>
         <a
           title="Instagram"
           target="_blank"
           href="https://www.instagram.com/brislazaro/"
-          ><img class="footer__link" src="./imagenes/ig.png"
+          ><img class="footer__link" src="../imagenes/ig.png"
         /></a>
       </div>
     </footer>
 
-    <script src="./login.js"></script>
+    <script src="../scripts/login.js"></script>
   </body>
 </html>
