--- a/pages/products.html
+++ b/pages/products.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/products.css" />
+    <link rel="stylesheet" href="../styles/global.css" />
+    <link rel="stylesheet" href="../styles/products.css" />
     <title>Maquillaje</title>
   </head>
   <body>
     <header class="header">
-      <img class="logo" src="./imagenes/beautylogo.avif" />
+      <img class="logo" src="../imagenes/beautylogo.avif" />
       <div class="header__buttons">
         <a title=" login" href="./login.html">
-          <img class="login__img" src="./imagenes/login.jpeg" />
+          <img class="login__img" src="../imagenes/login.jpeg" />
         </a>
         <a title="Cart" href="./cart.html">
           <button class="header__button">Cart</button></a
@@ -30,18 +30,18 @@
           title="Facebook"
           target="_blank"
           href="https://www.facebook.com/brislazaroo"
-          ><img class="footer__link" src="./imagenes/fb.png"
+          ><img class="footer__link" src="../imagenes/fb.png"
         /></a>
         <a
           title="Instagram"
           target="_blank"
           href="https://www.instagram.com/brislazaro/"
-          ><img class="footer__link" src="./imagenes/ig.png"
+          ><img class="footer__link" src="../imagenes/ig.png"
         /></a>
       </div>
     </footer>
 
-    <script src="./data.js"></script>
-    <script src="./products.js"></script>
+    <script src="../scripts/data.js"></script>
+    <script src="../scripts/products.js"></script>
   </body>
 </html>
